fix for jmol densities

--- a/UTILS/fa2.col-NOs/REF_FILES/multi.orbitals.html
+++ b/UTILS/fa2.col-NOs/REF_FILES/multi.orbitals.html
@@ -24,6 +24,9 @@
 </tr><tr>
 <td><img src="merged-mld_MO_13.png" "border="1" width="400"><br> MO 13: molden_no_ci.drt1.state3.sp 0.0000 / 0.9936 </td>
 <td><img src="merged-mld_MO_14.png" "border="1" width="400"><br> MO 14: molden_no_ci.drt1.state3.sp 0.0000 / 0.8320 </td>
+</tr><tr>
+<td><img src="merged-mld_dens_plus.png" "border="1" width="400"><br> Density (plus)</td>
+<td><img src="merged-mld_dens_minus.png" "border="1" width="400"><br> Density (minus)</td>
 </tr></table>
 </body>
 </html>
